fix body overflow

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,6 +12,14 @@
   box-sizing: inherit;
 }
 
+body {
+  height: 100vh;
+}
+
+body.lock {
+  overflow: hidden;
+}
+
 html {
   font-family: sans-serif;
 }
@@ -59,17 +67,28 @@ img {
   }
 }
 
-/* INTRO */
+/* WRAPPER */
 
 .wrapper {
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   background-image: url('../img/bg/bg_mobile.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media (min-width: 768px) {
+  .wrapper {
+    background-image: url('../img/bg/bg_tablet.jpg');
+  }
+}
+
+@media (min-width: 1440px) {
+  .wrapper {
+    background-image: url('../img/bg/bg_desktop.jpg');
+  }
 }
 
 /* HEADER */
@@ -97,78 +116,6 @@ img {
   }
 }
 
-/* HERO */
-
-.hero {
-  flex-grow: 1;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
-.hero_title,
-.hero_subtitle {
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.hero_title {
-  font-family: roboto_condensed_bold;
-  font-size: 32px;
-  line-height: 1;
-}
-
-.hero_subtitle {
-  font-family: roboto_slab_light;
-  font-size: 25px;
-  line-height: 40px;
-  letter-spacing: 2px;
-}
-
-.hero_description {
-  font-family: roboto_slab_light;
-  font-size: 10px;
-  line-height: 1;
-  color: #fff;
-}
-
-@media (min-width: 768px) {
-  .wrapper {
-    background-image: url('../img/bg/bg_tablet.jpg');
-  }
-
-  .hero_title {
-    font-size: 40px;
-  }
-
-  .hero_subtitle {
-    font-size: 32px;
-    line-height: 50px;
-    letter-spacing: 3px;
-  }
-
-  .hero_description {
-    font-size: 14px;
-  }
-}
-
-@media (min-width: 1440px) {
-  .wrapper {
-    background-image: url('../img/bg/bg_desktop.jpg');
-  }
-
-  .hero_title {
-    font-size: 50px;
-  }
-
-  .hero_subtitle {
-    font-size: 40px;
-    line-height: 60px;
-    letter-spacing: 4px;
-  }
-}
-
 /* LOGO */
 
 .logo {
@@ -188,11 +135,19 @@ img {
   .logo {
     font-size: 24px;
   }
+
+  .logo_image {
+    margin-right: 6px;
+  }
 }
 
 @media (min-width: 1440px) {
   .logo {
     font-size: 30px;
+  }
+
+  .logo_image {
+    margin-right: 8px;
   }
 }
 
@@ -400,6 +355,70 @@ img {
   .socials_link {
     padding: 0;
     margin-left: 20px;
+  }
+}
+
+/* HERO */
+
+.hero {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.hero_title,
+.hero_subtitle {
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.hero_title {
+  font-family: roboto_condensed_bold;
+  font-size: 32px;
+  line-height: 1;
+}
+
+.hero_subtitle {
+  font-family: roboto_slab_light;
+  font-size: 25px;
+  line-height: 40px;
+  letter-spacing: 2px;
+}
+
+.hero_description {
+  font-family: roboto_slab_light;
+  font-size: 10px;
+  line-height: 1;
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .hero_title {
+    font-size: 40px;
+  }
+
+  .hero_subtitle {
+    font-size: 32px;
+    line-height: 50px;
+    letter-spacing: 3px;
+  }
+
+  .hero_description {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 1440px) {
+  .hero_title {
+    font-size: 50px;
+  }
+
+  .hero_subtitle {
+    font-size: 40px;
+    line-height: 60px;
+    letter-spacing: 4px;
   }
 }
 
